# BIMTwinOps

./: .env.ollama.example  .gitignore  .gitmodules  COMPLETION_REPORT.md  FINAL_SUMMARY.md  README.md  SETUP.md  bootstrap.ps1  start-all.bat  start-all.ps1  start-backend.bat  start-backend.ps1  start-frontend.bat  start-frontend.ps1  stop-all.bat  stop-all.ps1  stop-backend.ps1  stop-frontend.ps1
backend/: .env.example
backend/api/: .env.example  bsdd_client.py  bsdd_ingestion.py  genai_service.py  kg_graphql.py  kg_routes.py  knowledge_graph_schema.py  main.py  requirements.txt
backend/api/agents/: __init__.py  action_agent.py  executor_agent.py  (+8 more)
backend/api/mcp_servers/opensearch/: QUICKSTART.md  README.md  __init__.py  __main__.py  pyproject.toml  server.py  test_connection.py  test_server.py
backend/aps-service/: .env.example  package-lock.json  package.json
backend/pointnet_s3dis/: .gitignore  online_segmentation.py
backend/scripts/: compute_knn_near.py
docs/: BSDD_API_REFERENCE.md  BSDD_INTEGRATION.md  BSDD_UI_UX_ANALYSIS.md  COMPONENT_ARCHITECTURE.md  GRAPHQL_API_GUIDE.md  MODULE_INTEGRATION.md  PRIORITY_0_COMPLETE.md  PROGRESS_P0_FOUNDATION.md  PROGRESS_REPORT_2026-01-15.md  SPECIALIST_AGENTS_COMPLETE.md  TASK_TRACKER.md  WINDOWS_AUTO_INSTALL.md
pointcloud-frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
pointcloud-frontend/src/: App.jsx  ChatStyles.css  agentApi.jsx  api.jsx  index.css  main.jsx
scripts/: bootstrap.ps1  configure.ps1  deploy.ps1  install.ps1  setup.ps1  start-services.ps1  stop-services.ps1
(+60 files in other folders)
