[project]
name = "opensearch-mcp-server"
version = "0.1.0"
description = "MCP server for OpenSearch semantic search and document operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "opensearch-py>=2.3.0",
    "pydantic>=2.0.0",
]

[project.scripts]
opensearch-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
